<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MEMO</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_teleop_2019">Teleop</string>
    <string name="PROPERTY_event">Event</string>
    <string name="TBA_TEST_EVENT">TestEvent</string>
    <string name="title_activity_sandstorm">Sandstorm</string>
    <string name="title_activity_test">Test and Export</string>
    <string name="loading_station" tools:ignore="ExtraTranslation">loading station</string>
    <string name="cargo_pickup">Cargo</string>
    <string name="pre_loaded">Pre-loaded</string>
    <string name="depot">depot</string>
    <string name="ground">ground</string>
    <string name="hatch_pickup">Hatch</string>
    <string name="cross_habline">Cross Habline</string>
    <string name="control">Control</string>
    <string name="drivers">Driver</string>
    <string name="cycles">Cycles</string>
    <string name="time">Time</string>
    <string name="teleop">teleop</string>
    <string name="team">Team</string>
    <string name="comment">Comment</string>
    <string name="go">Go</string>
    <string name="to_endgame">To endgame</string>
    <string name="cargo">Cargo</string>
    <string name="hatch">Hatch</string>
    <string name="pickup_options">Pickup options:</string>
    <string name="start_level">Start Level</string>
    <string name="event_data">Event Data</string>
    <string name="test_and_export">Test and Export</string>
    <string name="rocket_level_3">rocket level 3</string>
    <string name="dropped">dropped</string>
    <string name="delivery">Delivery</string>
    <string name="cargo_ship">Cargo ship</string>
    <string name="rocket_level_2">rocket level 2</string>
    <string name="rocket_level_1">rocket level 1</string>
    <string name="comic_sans">Comic sans</string>
    <string name="textview">TextView</string>
    <string name="export_event_data_to_csv">Export event data to CSV</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="deadness">Deadness (%)</string>
    <string name="level_3">Level 3</string>
    <string name="exit">Exit</string>
    <string name="climb_time_sec">Climb Time (sec)</string>
    <string name="climb">Climb Level</string>
    <string name="timesUp">Times Up</string>
    <string name="defense">Defense (%)</string>
    <string name="TeamNotes">TeamNotes</string>
</resources>
