<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp">

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/roundedbutton_grey"
        android:onClick="cancelled"
        android:text="@android:string/cancel"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropped_button" />

    <Button
        android:id="@+id/rocketLvl3"
        android:layout_width="179dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/roundedbutton_light_grey"
        android:onClick="deliveryHandler"
        android:text="@string/rocket_level_3"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rocketLvl2" />

    <Button
        android:id="@+id/dropped_button"
        android:layout_width="179dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/roundedbutton_red_grey"
        android:onClick="deliveryHandler"
        android:text="@string/dropped"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rocketLvl3" />

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/delivery"
        android:textColor="#8470ad"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cargoShipDel"
        android:layout_width="179dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/roundedbutton_grey"
        android:text="@string/cargo_ship"
        android:textSize="18sp"
        android:onClick="deliveryHandler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_textview" />

    <Button
        android:id="@+id/rocketLvl2"
        android:layout_width="179dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/roundedbutton_grey"
        android:onClick="deliveryHandler"
        android:text="@string/rocket_level_2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rocketLvl1" />

    <Button
        android:id="@+id/rocketLvl1"
        android:layout_width="179dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/roundedbutton_light_grey"
        android:onClick="deliveryHandler"
        android:text="@string/rocket_level_1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cargoShipDel" />


    <LinearLayout

        android:id="@+id/comments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toTeleop">

        <!-- this empty linear layout is the trick to taking the focus off the Text boxes -->
        <LinearLayout android:focusable="true"
            android:focusableInTouchMode="true" android:layout_width="0px"
            android:layout_height="0px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/teamNumber"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusableInTouchMode="true"
            android:hint="@string/team"
            android:inputType="number"
            android:nextFocusLeft="@id/hatch_button"
            android:nextFocusUp="@id/comment" />

        <EditText
            android:id="@+id/comment"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusableInTouchMode="true"
            android:hint="@string/comment"
            android:inputType="text"
            android:nextFocusLeft="@id/teamNumber"
            android:nextFocusUp="@id/hatch_button" />

        <Button
            android:id="@+id/goButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:onClick="goHandler"
            android:text="@string/go"
            android:nextFocusUp="@+id/hatch_button"
            android:textColor="@color/white" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>